# Sovren-AI-Production

./: .env.b200  .env.example  .env.production  .gitignore  B200-DEPLOYMENT-GUIDE.md  B200-DEPLOYMENT-README.md  Dockerfile.production  README.md  SUBSCRIPTION_TIER_IMPLEMENTATION.md  b200-setup.sh  build_b200_server.sh  deploy-b200.sh  design.md  docker-compose.production.yml  ecosystem.config.js  fix-all-arrays.js  hardware-report.txt  jest.config.js  next.config.js  nginx.conf  package-lock.json  package.json  polyfill.js  requirements-b200.txt  requirements-voice.txt  requirements.md  server.js  sovren-ai-unified-spec.md  tailwind.config.js  tasks.md  tsconfig.json  tsconfig.server.json  tsconfig.server.runtime.json  tsconfig.tsbuildinfo
.github/workflows/: security-validation.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.html  _not-found.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 333.js  884.js  node_modules_next_cdb3e0._.js  src_74789f._.js  src_74789f._.js.map
.next/server/middleware/: middleware-manifest.json
.next/server/pages/: 404.html  500.html  _document.js.nft.json  _error.js  _error.js.nft.json
.next/static/chunks/: 117-d2242698f304ee6d.js  297-62079a09d40bffbf.js  685-fb5030a6dc839f99.js  966-bfc941e63a3dad79.js  [next]_internal_font_google_inter_e5387405_module_b52d8e.css  [next]_internal_font_google_inter_e5387405_module_b52d8e.css.map  [next]_internal_font_google_jetbrains_mono_455432e9_module_b52d8e.css  [next]_internal_font_google_jetbrains_mono_455432e9_module_b52d8e.css.map  [next]_internal_font_google_orbitron_5d61b861_module_b52d8e.css  [next]_internal_font_google_orbitron_5d61b861_module_b52d8e.css.map  [root of the server]__4200ab._.css  [root of the server]__4200ab._.css.map  b536a0f1-7185d07450f2fc24.js  main-app-9a7a55306ac43e37.js  main-da2093b733ab6f7d.js  node_modules_@react-three_fiber_dist_de219e._.js  node_modules_@react-three_fiber_dist_de219e._.js.map  node_modules_b553e2._.js  node_modules_b553e2._.js.map  node_modules_next_dist_986f43._.js  node_modules_next_dist_client_8bb71d._.js  node_modules_next_dist_client_8bb71d._.js.map  node_modules_next_dist_esm_build_templates_app-page_344a39.js  node_modules_next_dist_esm_build_templates_app-page_97268e.js  node_modules_next_dist_esm_build_templates_app-page_be62b1.js  node_modules_next_dist_esm_build_templates_app-page_fcba2b.js  node_modules_sip_js_lib_ffa935._.js  node_modules_sip_js_lib_ffa935._.js.map  node_modules_three-stdlib_26b2f7._.js  node_modules_three-stdlib_26b2f7._.js.map  node_modules_three_build_three_module_7d17ea.js  node_modules_three_build_three_module_7d17ea.js.map  node_modules_troika-three-text_dist_troika-three-text_esm_2702bf.js  node_modules_troika-three-text_dist_troika-three-text_esm_2702bf.js.map  src_989e45._.js  src_989e45._.js.map  src_app_globals_b52d8e.css  src_app_globals_b52d8e.css.map  src_app_layout_tsx_c8b011._.js  src_app_page_tsx_06b7b5._.js  (+2 more)
.next/static/css/: e1b65144fe404520.css
.next/static/development/: _buildManifest.js
.next/types/app/: page.ts
Sovren AI-Production Artifacts/: SOVREN AI Executive Command Center - System Architecture.docx  deployment-devops-architecture.md  performance-scaling-architecture.md  sovren-ai-prd.md  sovren-api-spec.md  sovren-component-hierarchy.md  sovren-database-architecture.md  sovren-eternal-roadmap.md  sovren-integration-flows.md  sovren-security-architecture.md  sovren-system-architecture .md  sovren-system-architecture.md  sovren-tech-implementation.md  sovren-ui-wireframes.md
config/: base.json  development.json  production.json  staging.json  test.json
docker/: nginx.conf  prometheus.yml  redis.conf  voice-synthesis.dockerfile
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md
public/: manifest.json
public/audio-worklets/: noise-reduction.js  spatial-processor.js  voice-enhancement.js
public/workers/: voice-synthesis-worker.js
scripts/: build.js  config-manager.js  deploy-b200-clean.sh  deploy-b200-sovren.sh  deploy-b200-vllm.sh  deploy-production.sh  deploy-shadowboard.sh  deploy-sovren-production.sh  download-llm-models.sh  initialize-admin-access.ts  install-b200-dependencies.sh  install-dependencies.js  install-vllm-flash-fp8.sh  install-whisper.sh  launch-production.sh  production-validation.sh  quantize-models.py  server-deployment.js  setup-billing-environment.sh  setup-ssl-domain.sh  stop-b200-vllm.sh  test-b200-system.ts  test-production.sh  validate-security.js
sovren_b200_engine/: CMakeLists.txt  README_B200.md
sovren_b200_engine/src/: inference_engine.cpp  inference_engine.h  main.cpp
sovren_b200_engine/src/kernels/: attention_kernel.cu  ffn_kernel.cu  fp8_tensor_core_kernel.cu
src/: middleware.ts  polyfills.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/3d/: CommandBridge.tsx  ExecutiveAvatar.tsx  ExecutiveCircle.tsx  HolographicDisplay.tsx  NeuralSky.tsx  SOVRENAIAvatar.tsx
src/components/autoscaling/: B200AutoScalingDashboard.tsx
src/components/benchmarking/: B200BenchmarkDashboard.tsx
src/components/coordination/: ExecutiveCoordinationDashboard.tsx
src/components/layout/: Header.tsx  (+1 more)
src/config/: phone_delegation_matrix.json
src/database/: connection.ts
src/hooks/: useVoiceSystem.ts
src/mcp/: SOVRENMCPServer.py  deploy_mcp_server.py  requirements.txt  test_mcp_server.py
src/middleware/: authentication.ts  edgeRateLimit.ts  edgeSecurity.ts  rateLimit.ts  redisRateLimit.ts  security.ts
src/scripts/: b200_tts_synthesis.py  executeMarketDomination.ts  initialize-b200-dashboard.ts  install_b200_voice_models.py
src/tests/: TestRunner.ts
(+265 files in other folders)
